src/test/ui/consts/const-unwrap.stderr
error[E0080]: any use of this value will cause an error
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
LL |             None => panic!("called `Option::unwrap()` on a `None` value"),
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                     |
   |                     the evaluated program panicked at 'called `Option::unwrap()` on a `None` value', $DIR/const-unwrap.rs:9:38
   |                     inside `Option::<i32>::unwrap` at $SRC_DIR/core/src/panic.rs:LL:COL
   |                     inside `BAR` at $DIR/const-unwrap.rs:9:18
   | 
  ::: $DIR/const-unwrap.rs:9:1
   |
LL | const BAR: i32 = Option::<i32>::None.unwrap();
   | ----------------------------------------------
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
